[package]
name = "backend"
version = "0.1.0"
authors = ["kokhanov <kokhanov@yandex-team.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.11"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.6.2"
failure = "0.1.5"
futures-util-preview = { version = "=0.3.0-alpha.18" }
#hyper = { git = "https://github.com/hyperium/hyper" }
hyper = "0.13.0-alpha.1"
log = "0.4"
postgres = "=0.16.0-rc.1"
pretty_env_logger = "0.3"
#tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio = { version = "=0.2.0-alpha.4" }
tokio-postgres = "0.4.0-rc.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1.0"
lazy_static = "1.4.0"
r2d2_postgres = "=0.15.0-rc.1"
r2d2 = "0.8.5"
